--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,21 +20,20 @@
         android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:id="@+id/listView"
-        android:layout_marginTop="47dp"
+        android:layout_toStartOf="@+id/buttonSend"
+        android:choiceMode="singleChoice"
         android:layout_below="@+id/recipientsListTextView"
-        android:layout_toStartOf="@+id/textViewNumChar"
-        android:layout_alignRight="@+id/textViewNumChar"
-        android:layout_alignEnd="@+id/textViewNumChar" />
+        android:layout_toLeftOf="@+id/buttonSend" />
 
     <EditText
         android:layout_width="fill_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:id="@+id/editTextMsg"
-        android:layout_below="@+id/listView"
+        android:layout_toStartOf="@+id/buttonSend"
         android:layout_alignLeft="@+id/listView"
         android:layout_alignStart="@+id/listView"
-        android:layout_toLeftOf="@+id/textViewNumChar"
-        android:layout_toStartOf="@+id/textViewNumChar" />
+        android:layout_toLeftOf="@+id/buttonSend"
+        android:layout_alignParentBottom="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -42,17 +41,35 @@
         android:text="0"
         android:id="@+id/textViewNumChar"
         android:maxLength="10"
-        android:layout_below="@+id/listView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_above="@+id/buttonSend"
+        android:layout_alignRight="@+id/buttonSend"
+        android:layout_alignEnd="@+id/buttonSend" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Inbox"
+        android:id="@+id/openInbox" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="send"
         android:id="@+id/buttonSend"
-        android:layout_below="@+id/editTextMsg"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignBottom="@+id/editTextMsg"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="+"
+        android:id="@+id/buttonAddKey"
+        android:layout_toEndOf="@+id/listView"
+        android:layout_alignBottom="@+id/listView"
+        android:layout_toLeftOf="@+id/textViewNumChar"
+        android:layout_toStartOf="@+id/textViewNumChar"
+        android:layout_toRightOf="@+id/listView" />
 
 
 </RelativeLayout>
