finished a lot of things, still some bugs

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Inbox"
-        android:id="@+id/openInbox" />
+        android:id="@+id/openInbox"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/listView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/listView" />
 
     <Button
         android:layout_width="wrap_content"
