--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,8 @@
         android:layout_toEndOf="@+id/listView"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/listView" />
+        android:layout_toRightOf="@+id/listView"
+        android:textSize="16dp" />
 
     <Button
         android:layout_width="wrap_content"
